# finx

./: .env.example  .gitignore  API_COMPLIANCE_REVIEW.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  BEHAVIORAL_TEST_REPORT.md  CHANGELOG.md  CODEX_REVIEW_INSTRUCTIONS.md  COMPARISON.md  COMPREHENSIVE_REVIEW_REPORT.md  CONTRIBUTING.md  CYCLE_TRACKER.md  Cargo.toml  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_REPORT.md  EXAMPLES.md  FINAL_VERIFICATION.md  FIXES_SUMMARY.md  FIX_PLAN.md  FIX_PROGRESS_16_52.md  FIX_STATUS_REPORT.md  GOOSE_FIX_INSTRUCTIONS.md  GOOSE_INSTRUCTIONS.md  IMPLEMENTATION.md  INTEGRATION_AUDIT.md  LICENSE  MLX_INTEGRATION.md  MULTI_TOOL_STRATEGY.md  PERFORMANCE_AUDIT.md  PHASE0_2_CORRECTNESS.md  PHASE10_CORRECTNESS.md  PHASE3_CORRECTNESS.md  PHASE4_COMPLETE.md  PHASE4_SELF_REVIEW.md  PHASE5_PLAN.md  PHASE7_CORRECTNESS.md  PHASE7_PLAN.md  PHASE8_CORRECTNESS.md  PHASE9_CORRECTNESS.md  PHASES11_17_CORRECTNESS.md  (+23 more)
.github/: PULL_REQUEST_TEMPLATE.md
crates/ferrotick-agent/: Cargo.toml
crates/ferrotick-agent/src/: envelope.rs  lib.rs  metadata.rs  schema_registry.rs  stream.rs
crates/ferrotick-ai/: Cargo.toml
crates/ferrotick-ai/src/: error.rs  lib.rs
crates/ferrotick-ai/src/compiler/: mod.rs  strategy.rs
crates/ferrotick-ai/src/llm/: mod.rs  openai.rs
crates/ferrotick-ai/src/reporting/: backtest.rs  mod.rs  templates.rs
crates/ferrotick-ai/src/validation/: mod.rs  sanitizer.rs
crates/ferrotick-backtest/: Cargo.toml
crates/ferrotick-backtest/benches/: vectorized_benchmark.rs
crates/ferrotick-backtest/src/: error.rs  lib.rs
crates/ferrotick-backtest/src/costs/: fees.rs  mod.rs  slippage.rs
crates/ferrotick-backtest/src/engine/: event_driven.rs  executor.rs  mod.rs
crates/ferrotick-backtest/src/metrics/: drawdown.rs  mod.rs  returns.rs  risk.rs
crates/ferrotick-backtest/src/portfolio/: cash.rs  mod.rs  order.rs  position.rs
crates/ferrotick-backtest/src/vectorized/: engine.rs  mod.rs  signals.rs
crates/ferrotick-backtest/tests/: behavioral_portfolio.rs  vectorized_test.rs
crates/ferrotick-cli/: Cargo.toml
crates/ferrotick-cli/src/: cli.rs  error.rs  main.rs  metadata.rs  output.rs
crates/ferrotick-cli/src/commands/: bars.rs  cache.rs  cache_load.rs  earnings.rs  export.rs  financials.rs  fundamentals.rs  ml.rs  mod.rs  quote.rs  schema.rs  search.rs  sources.rs  sql.rs  strategy.rs  warehouse_sync.rs
crates/ferrotick-cli/src/output/: stream_writer.rs
crates/ferrotick-core/: Cargo.toml
crates/ferrotick-core/src/: cache.rs  data_source.rs  envelope.rs  error.rs  http_client.rs  lib.rs  provider_policy.rs  retry.rs  routing.rs  throttling.rs
crates/ferrotick-core/src/adapters/: alpaca.rs  alphavantage.rs  polygon.rs  yahoo.rs
crates/ferrotick-core/src/assets/: crypto.rs  forex.rs  futures.rs  mod.rs  options.rs
crates/ferrotick-core/src/domain/: interval.rs  mod.rs  models.rs  timestamp.rs
crates/ferrotick-ml/: Cargo.toml
crates/ferrotick-ml/src/: error.rs  lib.rs
crates/ferrotick-ml/src/features/: indicators.rs  mod.rs  store.rs  transforms.rs  windows.rs
crates/ferrotick-ml/src/models/: decision_tree.rs  mod.rs  svm.rs  traits.rs
crates/ferrotick-ml/src/rl/: env.rs  mod.rs  qtable.rs  random.rs  reward.rs
crates/ferrotick-ml/src/training/: dataset.rs  evaluation.rs  mod.rs
crates/ferrotick-ml/tests/: behavioral_indicators.rs  behavioral_learning.rs  phase10_decision_tree.rs  phase10_svm.rs  phase7_feature_pipeline.rs  rl_test.rs
crates/ferrotick-optimization/: Cargo.toml
crates/ferrotick-optimization/src/: error.rs  grid_search.rs  lib.rs  storage.rs  walk_forward.rs
crates/ferrotick-optimization/tests/: optimization_test.rs
crates/ferrotick-strategies/: Cargo.toml
crates/ferrotick-strategies/src/: error.rs  lib.rs
crates/ferrotick-strategies/src/dsl/: mod.rs  parser.rs  validator.rs
crates/ferrotick-strategies/src/signals/: composite.rs  generator.rs  mod.rs
crates/ferrotick-strategies/src/sizing/: mod.rs  position.rs
crates/ferrotick-strategies/src/strategies/: bb_squeeze.rs  ma_crossover.rs  macd_trend.rs  mod.rs  rsi_reversion.rs
crates/ferrotick-strategies/src/traits/: mod.rs  strategy.rs
crates/ferrotick-strategies/tests/: behavioral_signals.rs  strategies_test.rs
crates/ferrotick-trading/: Cargo.toml
crates/ferrotick-trading/src/: error.rs  lib.rs
crates/ferrotick-trading/src/brokers/: alpaca.rs  ib.rs  mod.rs
crates/ferrotick-trading/src/executor/: live.rs  mod.rs
crates/ferrotick-trading/src/paper/: account.rs  engine.rs  mod.rs
crates/ferrotick-trading/tests/: trading_test.rs
crates/ferrotick-warehouse/: Cargo.toml
crates/ferrotick-warehouse/src/: duckdb.rs  lib.rs  migrations.rs  repository.rs  views.rs
crates/ferrotick-web/: Cargo.toml
crates/ferrotick-web/src/: error.rs  lib.rs  main.rs
crates/ferrotick-web/src/handlers/: backtest.rs
crates/ferrotick-web/src/models/: api.rs
crates/ferrotick-web/src/routes/: backtest.rs  health.rs  mod.rs  strategies.rs
crates/ferrotick-web/tests/: web_test.rs
crates/finx-cli/: Cargo.toml
crates/finx-cli/src/: cli.rs  error.rs  main.rs  metadata.rs  output.rs
crates/finx-cli/src/commands/: bars.rs  cache.rs  fundamentals.rs  mod.rs  quote.rs  schema.rs  search.rs  sources.rs  sql.rs  warehouse_sync.rs
crates/finx-cli/src/output/: stream_writer.rs
crates/finx-core/: Cargo.toml
crates/finx-core/src/: circuit_breaker.rs  data_source.rs  envelope.rs  error.rs  lib.rs  routing.rs  source.rs
crates/finx-core/src/adapters/: alpaca.rs  alphavantage.rs  mod.rs  polygon.rs  yahoo.rs
crates/finx-core/src/domain/: mod.rs  models.rs  symbol.rs  timestamp.rs
docs/: ROADMAP.md
examples/: README.md  (+7 more)
tests/: BEHAVIOR_TEST_SUMMARY.md  Cargo.toml  assets_test.rs  cli_user_journeys.rs  data_provider_behavior.rs  edge_cases.rs  error_handling_behavior.rs  error_handling_security.rs  integration_test.rs  integration_workflows.rs  lib.rs  mathematical_correctness.rs  multiasset_behavioral.rs  provider_contract.rs  state_management.rs  test_helpers.rs  warehouse_behavior.rs
tests/contract/: provider_contract.rs
(+25 files in other folders)
