[workspace]
members = [
  "crates/finx-core",
  "crates/finx-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
rust-version = "1.83"

[workspace.dependencies]
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
time = { version = "0.3.37", features = ["formatting", "parsing", "serde"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }
