[workspace]
members = [
  "crates/ferrotick-core",
  "crates/ferrotick-cli",
  "crates/ferrotick-warehouse",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
rust-version = "1.83"

[workspace.dependencies]
clap = { version = "4.5.31", features = ["derive"] }
duckdb = { version = "1.2.2", features = ["bundled"] }
governor = "0.6.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tempfile = "3.17.1"
thiserror = "2.0.11"
time = { version = "0.3.37", features = ["formatting", "parsing", "serde"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }
