[package]
name = "ferrotick-backtest"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Event-driven backtesting engine for ferrotick"

[dependencies]
ferrotick-core = { path = "../ferrotick-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono = { version = "0.4", features = ["serde"] }
duckdb = { version = "1.1", features = ["bundled"] }
ndarray = { version = "0.15", features = ["rayon"] }
rayon = "1.10"

[dev-dependencies]
tempfile.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "vectorized_benchmark"
harness = false
