[package]
name = "ferrotick-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core domain contracts and envelopes for ferrotick"

[dependencies]
duckdb.workspace = true
ferrotick-warehouse = { path = "../ferrotick-warehouse" }
governor.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
serde_json.workspace = true

[[test]]
name = "provider_contract"
path = "../../tests/contract/provider_contract.rs"
