[package]
name = "ferrotick-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core domain contracts and envelopes for ferrotick"

[dependencies]
duckdb.workspace = true
fastrand = "2.3"
ferrotick-warehouse = { path = "../ferrotick-warehouse" }
governor.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
urlencoding.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[[test]]
name = "provider_contract"
path = "../../tests/contract/provider_contract.rs"

[[test]]
name = "cli_user_journeys"
path = "../../tests/cli_user_journeys.rs"

[[test]]
name = "data_provider_behavior"
path = "../../tests/data_provider_behavior.rs"

[[test]]
name = "warehouse_behavior"
path = "../../tests/warehouse_behavior.rs"

[[test]]
name = "error_handling_security"
path = "../../tests/error_handling_security.rs"
