[package]
name = "ferrotick-optimization"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrotick-core = { path = "../ferrotick-core" }
ferrotick-backtest = { path = "../ferrotick-backtest" }
ferrotick-strategies = { path = "../ferrotick-strategies" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.17"
tokio = { version = "1", features = ["full"] }
