[package]
name = "ferrotick-trading"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrotick-core = { path = "../ferrotick-core" }
ferrotick-strategies = { path = "../ferrotick-strategies" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
