[package]
name = "ferrotick-warehouse"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "DuckDB warehouse, cache sync, and analytics for ferrotick"

[dependencies]
duckdb.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex = "0.4"

[dev-dependencies]
tempfile.workspace = true
