[package]
name = "finx-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "finx command-line interface"

[[bin]]
name = "finx"
path = "src/main.rs"

[dependencies]
clap.workspace = true
finx-core = { path = "../finx-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
